# OStrich

./: .clang-format  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  backup  config.txt  et --hard 9cae6c33e64910a46969e0dab8d8becff18fd8cd  gdb_start.sh  gdb_start_mac.sh  gen_sd_image.sh  helper.sh  linker.ld  mar_24.txt  network_demo.py  offset-gen.py  offsets.txt  out.txt  profiler.py  repeatrun.sh  sdcard.dd  snake_client.py  snake_server.py  system_call_handling.md  test_sys_call.S
.vs_code/: c_cpp_properties.json
Arm32_64_USB/: emb-stdio.c  kernel.elf  kernel.list  kernel.map  main.c  rpi-usb.c
documents/: filesys_design.md  system_call_handling.md
filesystem/: CMakeLists.txt  README.md  main.cpp
filesystem/filesys/: BitmapManager.cpp  BitmapManager.h  Block.h  Directory.cpp  Directory.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  InodeTable.cpp  InodeTable.h  LogManager.cpp  LogManager.h  LogRecord.h  fs_requests.cpp  fs_requests.h
filesystem/interface/: BlockManager.cpp  BlockManager.h  FakeDiskDriver.cpp  FakeDiskDriver.h
include/: RealDiskDriver.h  arp.h  atomic.h  bitmap.h  core.h  dcache.h  dhcp.h  dns.h  dwc.h  elf_loader.h  entry.h  event.h  event_loop.h  fcs.h  file_table.h  fork.h  frame.h  frame_buff_list.h  framebuffer.h  fs.h  fs_init.h  function.h  gpio.h  hash.h  heap.h  hid.h  icache.h  icmp.h  ip.h  ipv4.h  irq.h  kernel_tests.h  keyboard.h  ksocket.h  libk.h  listener.h  locked_queue.h  mailbox.h  mm.h  mmap.h  (+41 more)
profiler/: profiler.cpp  profiler.h
ramfs/: build_ramfs.cpp
sbin/: system_calls.S  (+1 more)
(+244 files in other folders)
